--- a/index.html
+++ b/index.html
@@ -8,33 +8,46 @@
     <style>
         body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; margin:0; }
         .card { max-width: 500px; margin: auto; background: white; border-radius: 20px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 15px 40px rgba(0,0,0,0.5); }
-        .lang-btn { font-size: 10px; padding: 5px 12px; cursor: pointer; background: #f0f0f0; border: 1px solid #ccc; border-radius: 5px; font-weight: bold; }
-        .lang-btn.active { background: #d4af37; color: #000; }
+        .branding { text-align: center; margin-bottom: 20px; }
+        .branding h2 { font-weight: 900; color: #001d3d; margin-bottom: 0; font-size: 26px; }
+        .branding p { font-size: 12px; font-weight: bold; color: #d4af37; text-transform: uppercase; margin-top: 0; }
+        .why-box { font-size: 10px; color: #555; text-align: center; margin-bottom: 15px; line-height: 1.4; padding: 0 10px; }
+        .legal-box { background: #fff1f0; border: 2px solid #ff4d4f; border-radius: 10px; padding: 12px; color: #a8071a; font-size: 10px; text-align: center; margin-bottom: 20px; font-weight: bold; }
         .btn-opt { border: 2px solid #001d3d; padding: 10px; border-radius: 10px; text-align: center; cursor: pointer; font-size: 10px; font-weight: bold; margin-bottom: 8px; background: #f8f9fa; text-transform: uppercase; }
         .selected { background: #001d3d !important; color: white !important; }
         .btn-main { background: #001d3d; color: white; width: 100%; height: 50px; font-weight: bold; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
-        #mainApp { display: none; margin-top: 15px; }
         .photo-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px; margin-bottom: 10px; }
-        .photo-box { width:100%; height:110px; background:#000; border:2px solid #001d3d; border-radius:8px; object-fit:contain; display:block; cursor: pointer; }
-        .report { background: #f1f3f5; border-left: 6px solid #1b5e20; padding: 15px; border-radius: 10px; font-size: 14px; margin-top: 15px; white-space: pre-wrap; }
+        .photo-box { width:100%; height:105px; background:#000; border:2px solid #001d3d; border-radius:8px; object-fit:contain; display:block; cursor: pointer; }
     </style>
 </head>
 <body onclick="resetIdle()">
 <div class="card">
+    <div class="branding">
+        <h2>SmartCargo ADVISORY</h2>
+        <p>Technical Consulting by MAY ROGA LLC</p>
+    </div>
+
+    <div class="why-box">
+        <strong>Why SmartCargo?</strong><br>
+        We provide stability to the entire logistics chain. We prevent fines and holds so the paying customer never loses money.
+    </div>
+
+    <div class="legal-box">
+        ⚠️ LEGAL SHIELD: WE ARE PRIVATE ADVISORS. NOT IATA/TSA/DOT. WE PROVIDE TECHNICAL SOLUTIONS; WE DON'T CERTIFY DG OR HANDLE CARGO.
+    </div>
+
     <div style="display:flex; justify-content:center; gap:5px; margin-bottom:15px;">
-        <button id="btnEn" class="lang-btn active" onclick="setLang('en', this)">ENGLISH</button>
-        <button id="btnEs" class="lang-btn" onclick="setLang('es', this)">ESPAÑOL</button>
+        <button id="btnEn" style="font-size:9px; padding: 0 10px;" onclick="setLang('en', this)">ENGLISH</button>
+        <button id="btnEs" style="font-size:9px; padding: 0 10px;" onclick="setLang('es', this)">ESPAÑOL</button>
     </div>
 
     <div id="accessSection">
-        <label style="font-size:11px; font-weight:bold;">1. ROLE:</label>
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px; margin-bottom:15px;">
             <div class="btn-opt role-btn" onclick="selRole('Shipper', this)">Shipper / Owner</div>
             <div class="btn-opt role-btn" onclick="selRole('Forwarder', this)">Forwarder / Agent</div>
             <div class="btn-opt role-btn" onclick="selRole('Trucker', this)">Trucker / Carrier</div>
             <div class="btn-opt role-btn" onclick="selRole('Operator', this)">Warehouse / Operator</div>
         </div>
-        <label style="font-size:11px; font-weight:bold;">2. TIER (EXCELLENCE LEVEL):</label>
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px; margin-bottom:15px;">
             <div class="btn-opt tier-btn" onclick="selTier(5, this)">Courier ($5)</div>
             <div class="btn-opt tier-btn" onclick="selTier(15, this)">Standard ($15)</div>
@@ -45,7 +58,7 @@
         <button id="activateBtn" class="btn-main">VALIDATE & ACCESS</button>
     </div>
 
-    <div id="mainApp">
+    <div id="mainApp" style="display:none;">
         <div id="timerDisp" style="background:#d4af37; text-align:center; font-weight:bold; padding:8px; margin-bottom:10px; border-radius:5px; font-size:11px;"></div>
         <div class="photo-grid">
             <div onclick="document.getElementById('f1').click()"><img id="p1" class="photo-box"><input type="file" id="f1" style="display:none" accept="image/*" onchange="loadPhoto(1)"></div>
@@ -53,13 +66,13 @@
             <div onclick="document.getElementById('f3').click()"><img id="p3" class="photo-box"><input type="file" id="f3" style="display:none" accept="image/*" onchange="loadPhoto(3)"></div>
         </div>
         <div style="position:relative; margin-top:10px;">
-            <textarea id="promptArea" class="u-full-width" style="height:110px; padding-right:45px;" placeholder="Voice or Text..."></textarea>
+            <textarea id="promptArea" class="u-full-width" style="height:100px; padding-right:45px;" placeholder="Voice or Text..."></textarea>
             <button onclick="startVoice()" style="position:absolute; right:10px; top:10px; border:none; background:none; cursor:pointer; font-size:22px;">🎤</button>
         </div>
         <button id="btnSolve" class="btn-main" style="background:#1b5e20;" onclick="getSolution()">GET SOLUTION</button>
-        <div id="advResponse"></div>
-        <button id="btnWs" class="btn-main" style="background:#25D366; margin-top:10px; display:none;" onclick="sendWS()">📩 WHATSAPP SOLUTION</button>
-        <button class="btn-main" style="background:#666; margin-top:5px; height:35px;" onclick="location.reload()">NEW CASE / RESET</button>
+        <div id="advResponse" style="margin-top:15px;"></div>
+        <button id="btnWs" class="btn-main" style="background:#25D366; margin-top:10px; display:none;" onclick="sendWS()">📩 SEND TO WHATSAPP</button>
+        <button class="btn-main" style="background:#666; margin-top:5px; height:35px;" onclick="location.reload()">RESET SYSTEM</button>
     </div>
 </div>
 <script src="app.js"></script>
