--- a/index.html
+++ b/index.html
@@ -3,101 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SmartCargo Advisory | MAY ROGA LLC</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <title>SmartCargo | MAY ROGA LLC</title>
     <style>
-        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; }
-        .card { max-width: 500px; margin: auto; background: white; border-radius: 20px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 15px 40px rgba(0,0,0,0.5); }
-        .branding h2 { font-weight: 900; color: #001d3d; text-align: center; margin-bottom: 0; }
-        .branding p { font-size: 12px; font-weight: bold; color: #d4af37; text-align: center; text-transform: uppercase; margin-top: 0; }
-        .legal-box { background: #fff1f0; border: 2px solid #ff4d4f; border-radius: 10px; padding: 12px; color: #a8071a; font-size: 10px; text-align: center; margin-bottom: 20px; font-weight: bold; }
-        .btn-main { background: #001d3d; color: white; width: 100%; height: 50px; font-weight: bold; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
-        .photo-box { width:100%; height:180px; background:#000; border:2px solid #001d3d; border-radius:10px; display:flex; align-items:center; justify-content:center; cursor:pointer; overflow:hidden; }
+        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 15px; margin:0; }
+        .card { max-width: 450px; margin: auto; background: white; border-radius: 20px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        .branding h2 { font-weight: 900; color: #001d3d; text-align: center; margin: 0; }
+        .branding p { font-size: 11px; font-weight: bold; color: #d4af37; text-align: center; text-transform: uppercase; margin: 0 0 20px 0; }
+        .btn-main { background: #001d3d; color: white; width: 100%; padding: 15px; font-weight: bold; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; margin-top: 10px; }
+        .tier-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px; }
+        .photo-box { width: 100%; height: 200px; background: #000; border-radius: 10px; margin-top: 15px; display: flex; align-items: center; justify-content: center; cursor: pointer; overflow: hidden; border: 2px solid #d4af37; }
+        #advResponse { background: #f8f9fa; padding: 15px; border-radius: 10px; margin-top: 15px; font-size: 14px; white-space: pre-wrap; display: none; }
     </style>
 </head>
 <body>
+
 <div class="card">
     <div class="branding"><h2>SmartCargo ADVISORY</h2><p>Technical Consulting by MAY ROGA LLC</p></div>
-    
-    <select id="userLang" style="width:100%; font-weight:bold; border:2px solid #d4af37; margin: 15px 0;">
-        <option value="es">IDIOMA: ESPAÑOL 🇪🇸</option>
-        <option value="en">LANGUAGE: ENGLISH 🇺🇸</option>
+
+    <select id="userLang" style="width:100%; font-weight:bold; border:2px solid #d4af37; padding: 10px; border-radius: 10px;">
+        <option value="es">ESPAÑOL 🇪🇸</option>
+        <option value="en">ENGLISH 🇺🇸</option>
     </select>
 
-    <div class="legal-box">⚠️ LEGAL SHIELD: PRIVATE ADVISORS. NOT IATA/TSA/DOT. WE PROVIDE SOLUTIONS.</div>
-    
     <div id="accessSection">
-        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / Reference">
-        <p style="font-size: 10px; text-align: center; font-weight: bold;">SELECCIONE TIER DE CONSULTA</p>
-        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px;">
-            <button class="btn-main" style="height:40px; font-size:10px;" onclick="pay(5)">Courier $5</button>
-            <button class="btn-main" style="height:40px; font-size:10px;" onclick="pay(15)">Standard $15</button>
-            <button class="btn-main" style="height:40px; font-size:10px;" onclick="pay(35)">Critical $35</button>
-            <button class="btn-main" style="height:40px; font-size:10px;" onclick="pay(95)">Project $95</button>
+        <input type="text" id="awb" class="u-full-width" placeholder="AWB / Referencia" style="width: 100%; padding: 10px; margin: 15px 0; box-sizing: border-box;">
+        <div class="tier-grid">
+            <button class="btn-main" style="font-size: 10px;" onclick="iniciarPago(5)">Courier $5</button>
+            <button class="btn-main" style="font-size: 10px;" onclick="iniciarPago(15)">Standard $15</button>
+            <button class="btn-main" style="font-size: 10px;" onclick="iniciarPago(35)">Critical $35</button>
+            <button class="btn-main" style="font-size: 10px;" onclick="iniciarPago(95)">Project $95</button>
         </div>
         <hr>
-        <p style="font-size: 10px; text-align: center;">LOGIN ADMINISTRADOR</p>
-        <input type="text" id="u" placeholder="User" class="u-full-width">
-        <input type="password" id="p" placeholder="Pass" class="u-full-width">
-        <button onclick="pay(0)" class="btn-main" style="background:#444;">ACCESO MASTER</button>
+        <input type="text" id="u" placeholder="Admin User" style="width:100%; margin-bottom:5px;">
+        <input type="password" id="p" placeholder="Admin Pass" style="width:100%;">
+        <button onclick="iniciarPago(0)" class="btn-main" style="background:#444;">ACCESO MASTER</button>
     </div>
 
     <div id="mainApp" style="display:none;">
-        <div onclick="document.getElementById('scFile').click()" class="photo-box">
-            <img id="scView" style="max-width:100%; max-height:100%; display:none;">
-            <span id="scLab" style="color:white; font-size:12px;">📷 ESCANEAR EVIDENCIA (IATA/DOT)</span>
-            <input type="file" id="scFile" accept="image/*" capture="environment" style="display:none;" onchange="scRead(event)">
+        <div onclick="document.getElementById('fileIn').click()" class="photo-box">
+            <img id="view" style="max-width:100%; max-height:100%; display:none;">
+            <span id="lab" style="color:white; font-size:12px;">📷 ESCANEAR CARGA / DOCUMENTO</span>
+            <input type="file" id="fileIn" accept="image/*" capture="environment" style="display:none;" onchange="capturar(event)">
         </div>
-        <textarea id="promptArea" class="u-full-width" style="margin-top:10px;" placeholder="Describa el problema..."></textarea>
-        <button onclick="getSolution()" class="btn-main" style="background:#1b5e20;">DICTAMINAR SOLUCIÓN</button>
-        <div id="advResponse" style="margin-top:15px; font-size:14px; white-space:pre-wrap; font-weight:bold;"></div>
-        <button onclick="clearAll()" style="width:100%; background:none; border:none; color:red; cursor:pointer; font-size:11px; margin-top:10px;">🗑️ BORRAR DATOS Y SALIR</button>
+        <textarea id="prompt" style="width:100%; height:80px; margin-top:15px; padding:10px; box-sizing:border-box;" placeholder="¿Cuál es la situación?"></textarea>
+        <button onclick="obtenerSolucion()" class="btn-main" style="background:#1b5e20;">OBTENER SOLUCIÓN MAESTRA</button>
+        <div id="advResponse"></div>
+        <button onclick="location.href='/'" class="btn-main" style="background:red; font-size:10px; height:auto; padding:5px;">SALIR Y BORRAR</button>
     </div>
 </div>
 
 <script>
-    let imgData = "";
+    let imageData = "";
     const params = new URLSearchParams(window.location.search);
     if(params.get('access') === 'granted') {
         document.getElementById('accessSection').style.display = 'none';
         document.getElementById('mainApp').style.display = 'block';
     }
 
-    function scRead(e) {
+    function capturar(e) {
         const reader = new FileReader();
         reader.onload = () => {
-            imgData = reader.result;
-            document.getElementById('scView').src = imgData;
-            document.getElementById('scView').style.display = "block";
-            document.getElementById('scLab').style.display = "none";
+            imageData = reader.result;
+            document.getElementById('view').src = imageData;
+            document.getElementById('view').style.display = "block";
+            document.getElementById('lab').style.display = "none";
         };
         reader.readAsDataURL(e.target.files[0]);
     }
 
-    async function pay(amt) {
+    async function iniciarPago(amt) {
         const fd = new FormData();
         fd.append("amount", amt);
-        fd.append("awb", document.getElementById('awbField').value || "REF-LOG");
+        fd.append("awb", document.getElementById('awb').value || "REF-SMART");
         fd.append("user", document.getElementById('u').value);
         fd.append("password", document.getElementById('p').value);
         const r = await fetch('/create-payment', { method: 'POST', body: fd });
         const d = await r.json();
         if(d.url) window.location.href = d.url;
+        else alert("Credenciales incorrectas.");
     }
 
-    async function getSolution() {
-        const out = document.getElementById('advResponse');
-        out.innerText = "ASESOR ANALIZANDO MILLONES DE ESCENARIOS...";
+    async function obtenerSolucion() {
+        const resBox = document.getElementById('advResponse');
+        resBox.style.display = "block";
+        resBox.innerHTML = "<b>SISTEMA:</b> Analizando millones de variables técnicas...";
         const fd = new FormData();
-        fd.append("prompt", document.getElementById('promptArea').value);
+        fd.append("prompt", document.getElementById('prompt').value || "Analizar evidencia.");
         fd.append("lang", document.getElementById('userLang').value);
-        fd.append("image_data", imgData);
+        fd.append("image_data", imageData);
         const r = await fetch('/advisory', { method: 'POST', body: fd });
         const d = await r.json();
-        out.innerText = d.data;
+        resBox.innerHTML = "<b>DICTAMEN MAY ROGA LLC:</b>\n" + d.data;
     }
-
-    function clearAll() { window.location.href = '/'; }
 </script>
 </body>
 </html>
